--- a/project3.ipynb
+++ b/project3.ipynb
@@ -53,7 +53,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "69274e12-b306-4a50-a807-82c0c4cc5e96"
+        "outputId": "82e2f2fe-19c1-4110-e5ba-d6e864bca754"
       },
       "source": [
         "!curl -Lo conda_installer.py https://raw.githubusercontent.com/deepchem/deepchem/master/scripts/colab_install.py\n",
@@ -70,7 +70,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100  3501  100  3501    0     0  20964      0 --:--:-- --:--:-- --:--:-- 21090\n"
+            "100  3501  100  3501    0     0  18721      0 --:--:-- --:--:-- --:--:-- 18721\n"
           ],
           "name": "stdout"
         },
@@ -84,8 +84,8 @@
             "installing miniconda to /root/miniconda\n",
             "done\n",
             "installing rdkit, openmm, pdbfixer\n",
-            "added conda-forge to channels\n",
             "added omnia to channels\n",
+            "added conda-forge to channels\n",
             "done\n",
             "conda packages installation finished!\n"
           ],
@@ -100,14 +100,14 @@
             "\n",
             "Collecting deepchem\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5d/6e/1b8a3295f9eac3da3813b44300a68b108ef2f2c8060a9ce12863b30c13a2/deepchem-2.6.0.dev20210520034915-py3-none-any.whl (564kB)\n",
-            "\u001b[K     |████████████████████████████████| 573kB 5.3MB/s \n",
-            "\u001b[?25hRequirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from deepchem) (1.1.5)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from deepchem) (1.19.5)\n",
+            "\u001b[K     |████████████████████████████████| 573kB 3.9MB/s \n",
+            "\u001b[?25hRequirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from deepchem) (1.0.1)\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from deepchem) (0.22.2.post1)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from deepchem) (1.1.5)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from deepchem) (1.19.5)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from deepchem) (1.4.1)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from deepchem) (1.0.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas->deepchem) (2.8.1)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas->deepchem) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas->deepchem) (2.8.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas->deepchem) (1.15.0)\n",
             "Installing collected packages: deepchem\n",
             "Successfully installed deepchem-2.6.0.dev20210520034915\n"
@@ -250,7 +250,7 @@
         "\n",
         "batch_size = 50"
       ],
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -269,31 +269,41 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t9mj1R3rtD4o",
-        "outputId": "7fdf832f-cea5-4d20-c10d-155796ab96a6"
+        "outputId": "150de760-d592-43c3-98f4-160be2c6bfef"
       },
       "source": [
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
-        "metric = dc.metrics.Metric(dc.metrics.roc_auc_score)\n",
+        "metric = dc.metrics.Metric(dc.metrics.pearson_r2_score)\n",
         "callback =  dc.models.ValidationCallback(data_generator(valid_dataset), 1000, metrics=metric)\n",
         "\n",
         "model = dc.models.KerasModel(MyGraphConvModel(), loss=dc.models.losses.L2Loss())\n",
-        "model.fit_generator(data_generator(train_dataset, epochs=500))"
+        "losses = []\n",
+        "model.fit_generator(data_generator(train_dataset, epochs=1000), all_losses= losses)"
       ],
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/tensorflow/python/ops/array_ops.py:5049: calling gather (from tensorflow.python.ops.array_ops) with validate_indices is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "The `validate_indices` argument has no effect. Indices are always validated on CPU and never validated on GPU.\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.016963316202163695"
+              "0.02930114507675171"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 7
         }
       ]
     },
@@ -313,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_g4kz7AFFPAJ",
-        "outputId": "2e7adc7c-414c-45f9-c4f1-0df0c443d5b6"
+        "outputId": "ab85481c-9215-4ae8-eaa2-ab782b4bccf5"
       },
       "source": [
         "print(model.model.summary())"
@@ -371,7 +381,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CUyN4Q3bZeHC",
-        "outputId": "534069b8-00cd-4938-bf0b-1c93a6b587f8"
+        "outputId": "74bf762c-0de0-4247-fc56-3f00e41e6a1e"
       },
       "source": [
         "from deepchem.metrics import to_one_hot\n",
@@ -390,17 +400,17 @@
         "# mean squared error\n",
         "print('training set mse:', model.evaluate_generator(data_generator(train_dataset), [dc.metrics.Metric(dc.metrics.mean_squared_error)], transformers))"
       ],
-      "execution_count": 23,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "training set score: {'pearson_r2_score': 0.9886462597142357}\n",
-            "test set score L2: {'pearson_r2_score': 0.7228903887507895}\n",
-            "valid set score L2: {'pearson_r2_score': 0.5688062578171504}\n",
-            "test set score rms: {'rms_score': 0.6328541359501481}\n",
-            "test set score mae: {'mae_score': 0.47857914379092137}\n",
-            "training set mse: {'mean_squared_error': 0.03016292563486338}\n"
+            "training set score: {'pearson_r2_score': 0.988019369784596}\n",
+            "test set score L2: {'pearson_r2_score': 0.7288292436615328}\n",
+            "valid set score L2: {'pearson_r2_score': 0.46301749258593017}\n",
+            "test set score rms: {'rms_score': 0.895647689016439}\n",
+            "test set score mae: {'mae_score': 0.7028270603231244}\n",
+            "training set mse: {'mean_squared_error': 0.023010553676752327}\n"
           ],
           "name": "stdout"
         }
@@ -422,7 +432,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "30774031-2383-42ed-fcab-c0679d355b60"
+        "outputId": "ea977cf8-fee0-4c29-b9af-fac392fb23b2"
       },
       "source": [
         "model = dc.models.GraphConvModel(1, mode='regression')\n",
@@ -434,7 +444,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.04386820316314697"
+              "0.038815505504608154"
             ]
           },
           "metadata": {
@@ -451,7 +461,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc95f7bd-38a7-40f5-8a85-7993374b30af"
+        "outputId": "db841ac4-18a3-4c9c-b3ef-3d468fd2d71b"
       },
       "source": [
         "metric = dc.metrics.Metric(dc.metrics.pearson_r2_score)\n",
@@ -463,8 +473,8 @@
         {
           "output_type": "stream",
           "text": [
-            "Training set score: {'pearson_r2_score': 0.950222000525846}\n",
-            "Test set score: {'pearson_r2_score': 0.6699406249105502}\n"
+            "Training set score: {'pearson_r2_score': 0.9610046181403874}\n",
+            "Test set score: {'pearson_r2_score': 0.5832503339189358}\n"
           ],
           "name": "stdout"
         }
